# Kronos

./: .env  .gitignore  CLAUDE.md  README.md  downmodel.py  fetch_ohlcv.py  predict.py  pyproject.toml
.claude/: settings.local.json
.claude/commands/: design_zh.md  execute_zh.md  spec_zh.md  task_zh.md  verify.md
doc/: tushare_doc.md  tushare_github.md
specs/china-stock-support/: design.md  requirements.md  tasks.md  verify.md
src/: data_sources.py  fetch_ohlcv.py
tests/: __init__.py  test_china_stock.py  test_compatibility.py  test_data_format.py  test_fix.py  test_integration.py  test_parameter_detection.py  test_tushare_demo.py
