[project]
name = "kronos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas==2.2.2",
    "torch",
    "einops==0.8.1",
    "huggingface_hub==0.33.1",
    "matplotlib==3.9.3",
    "tqdm==4.67.1",
    "safetensors>=0.4.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
